@@ -60,7 +60,6 @@ include /usr/share/quilt/quilt.make
 
 confflags-common = \
 	--disable-glu \
-	--disable-glut \
 	CFLAGS="$(CFLAGS)" \
 	CXXFLAGS="$(CXXFLAGS)"
 
@@ -168,9 +167,7 @@ confflags-swx11+glu = \
 	--disable-egl \
 	--with-gallium-drivers= \
 	--with-driver=xlib \
-	--disable-gl-osmesa \
 	--disable-egl \
-	--disable-glut \
 	CFLAGS="$(CFLAGS)" \
 	CXXFLAGS="$(CXXFLAGS)"
 
@@ -178,10 +175,8 @@ confflags-swx11+glu-static = \
 	--disable-egl \
 	--with-gallium-drivers= \
 	--with-driver=xlib \
-	--disable-gl-osmesa \
 	--enable-static \
 	--disable-egl \
-	--disable-glut \
 	CFLAGS="$(CFLAGS)" \
 	CXXFLAGS="$(CXXFLAGS)"
 
@@ -189,8 +184,6 @@ confflags-swx11+glu-i386-i686 = \
 	--disable-egl \
 	--with-gallium-drivers= \
 	--with-driver=xlib \
-	--disable-gl-osmesa \
-	--disable-glut \
 	--disable-egl \
 	--libdir=/usr/lib/$(DEB_HOST_MULTIARCH)/i686/cmov \
 	CFLAGS="$(CFLAGS) -march=i686" \
